internet button code

--- a/esp8266.md
+++ b/esp8266.md
@@ -224,13 +224,74 @@ should open the Serial Monitor in the Arduino IDE to see the serial output from 
 
 Notice: It seems that the `delay(1)` calls are needed: if I wait in a "busy loop", the chip will crash.
 
-Notice2: the chip won't boot into "program me" mode if GPIO02 is pulled down.
+Notice2: The chip won't boot into "program me" mode if GPIO02 is pulled down.
+
+Notice3: Make sure your serial monitor baud rate matches the one in your code (9600 baud in the above code)
 
 ## Internet button
 
 Now it's time to connect the button to the Internet!
 
-TODO
+Let's start by adding some constants in the top of your file:
+
+```cpp
+#include <ESP8266WiFi.h>
+
+const char* ssid     = "your wifi ssid";
+const char* password = "your wifi password";
+
+const char* host = "hostname";
+const int   port = 80;
+
+WiFiClient client;
+```
+
+Replace the ssid, password and host with appropriate values for your web server (I assume you have one running).
+
+Next I'll introduce the pieces of code you can use to join your WiFi network, connect to the remote host and make an HTTP request. It's up to you to tie the pieces together and make your device make the request when the button is pressed.
+
+```cpp
+void join(void)
+{
+  Serial.println("Joining WiFi");
+  WiFi.mode(WIFI_AP_STA);
+  WiFi.begin(ssid, password);
+  
+  while (WiFi.status() != WL_CONNECTED) {
+    delay(500);
+    Serial.print(".");
+  }
+
+  Serial.println("");
+  Serial.println("WiFi connected");  
+  Serial.println("IP address: ");
+  Serial.println(WiFi.localIP());  
+}
+
+int connectToHost() {
+  Serial.println("Connecting...");
+
+  if (!client.connect(host, port)) {
+    Serial.println("Connection failed");
+    return false;
+  }
+
+  Serial.println("Connected");
+  return true;
+}
+
+void sendData()
+{
+    client.print("GET /iot/boom HTTP/1.1\r\nHost: reaktor-iot.herokuapp.com\r\nConnection: close\r\n\r\n");
+    
+    while (client.available()) {
+      char c = client.read();
+      Serial.write(c);
+    }
+}
+```
+
+This is easy. Just do it.
 
 ## DHT-22 temperature and humidity sensor
 
