--- a/esp8266.md
+++ b/esp8266.md
@@ -230,7 +230,7 @@ Notice3: Make sure your serial monitor baud rate matches the one in your code (9
 
 ## Internet button
 
-Now it's time to connect the button to the Internet!
+Now it's time to connect the button to the Internet! You can use the Arduino [Wifi API](https://www.arduino.cc/en/Reference/WiFi) to do this. But, below is some code to make this even easier.
 
 Let's start by adding some constants in the top of your file:
 
