--- a/esp8266.md
+++ b/esp8266.md
@@ -297,4 +297,43 @@ This is easy. Just do it.
 
 Let's read some temperature and humidity values and send them to someone over the Internet!
 
-TODO
+First, you'll need the [DHT-sensor-library](https://github.com/adafruit/DHT-sensor-library) for Arduino. On command-line, navigate to your `Arduino/libraries` directory. On OSX, it's at `/Users/<yourusername>/Documents/Arduino/libraries`. Now clone the library repository using Git: `git clone https://github.com/adafruit/DHT-sensor-library.git`. After you're done with this, restart the Arduino IDE, so that it'll find the newly added library.
+
+Now you can connect your DHT-22 sensor. Connect it like this:
+
+```
+DHT-22 pin1    <-> +3.3V
+DHT-22 pin2    <-> ESP01 GPIO2
+DHT-22 pin4    <-> GND
+```
+
+In addition, connect a 10kΩ (or something in that ballpark) resistor between +DHT-22 pins 1 and 2.
+
+Now you can try reading temperature and humidity values from the DHT-22 sensor.
+
+```cpp
+#include <TM1637Display.h>
+#include "DHT.h"
+
+// DHT-22 temp/humidity sensor on pin 2
+DHT dht(2, DHT22);
+
+void setup() {
+  Serial.begin(9600);
+  dht.begin();    
+}
+
+void loop() {
+  float h = dht.readHumidity();
+  float t = dht.readTemperature();
+
+  Serial.print("Temp: ");
+  Serial.println(t);
+  Serial.print("Humidity: ");
+  Serial.println(h);
+
+  delay(1000);
+}
+```
+
+Works? Great! Now send the values to the Internet.
