--- a/esp8266.md
+++ b/esp8266.md
@@ -337,3 +337,5 @@ void loop() {
 ```
 
 Works? Great! Now send the values to the Internet.
+
+Not working? These sensors seem to be quite picky about the voltage. The 3.3v voltage we're using is on the lower limit of the voltage range for this sensor and it might not get enough current/voltage from your FTDI adapter. Try connecting a 2*AA battery pack in parallel to the power supply from the FTDI. Seems to work for me, at least. But remember never to feed more than 3.3v to the ESP-8266 or you're break it.
