--- a/esp8266.md
+++ b/esp8266.md
@@ -338,3 +338,23 @@ void loop() {
 Works? Great! Now send the values to the Internet.
 
 Not working? These sensors seem to be quite picky about the voltage. The 3.3v voltage we're using is on the lower limit of the voltage range for this sensor and it might not get enough current/voltage from your FTDI adapter. Try connecting a 2*AA battery pack in parallel to the power supply from the FTDI. Seems to work for me, at least. But remember never to feed more than 3.3v to the ESP-8266 or you'll break it.
+
+## Deep sleep
+
+The ESP-8266 has a handy feature called *deep sleep*. In this mode the chip will consume just around 30µA of current, meaning that it can theoretically run years on a pair of AA batteries. The bad news is that the ESP-01 module cannot wake up from deep sleep automatically, because this would require connecting the GPIO16 (XPD_DCDC) and RST (Reset) pins of the ESP-8266 chip together. In ESP-01, the GPIO16 pin is not available. Mr. Tim Jagenberg managed to [solder a wire between these pins](http://tim.jagenberg.info/2015/01/18/low-power-esp8266/), but this requires soldering skills far beyound mine at least. 
+
+So, with ESP-01 you can put the chip to deep sleep, but it won't wake up until you pull down the reset pin. But with the ESP-07 for instance, you can easily connect RST to GPIO16 and have the chip wake up from deep sleep after a given number of microseconds. It's very simple indeed:
+
+```cpp
+  int sleepSecs= 300;
+  int sleepMicros=sleepSecs * 1000000;
+  
+  Serial.print("Going to sleep for microseconds: ");
+  Serial.println(sleepMicros);
+
+  ESP.deepSleep(sleepMicros, WAKE_RF_DEFAULT);
+  // Just add some delay, because deep sleep doesn't happen immediately
+  delay(100000);
+```
+
+Using ESP-07 and deep sleep you can make a sensor device that periodically makes a measurement and sends it over Wifi to the nets. And most of the time, the device just sleeps, consuming virtually no power.
