--- a/esp8266.md
+++ b/esp8266.md
@@ -64,6 +64,10 @@ FTDI VCC       <-> ESP01 VCC
 FTDI VCC       <-> ESP01 CH_PD
 ```
 
+It should look like this:
+
+![connections](esp8266-ftdi-connections.png)
+
 See the following "pinout" image for which pin is which on the ESP-01.
 
 ![esp-01-pinout](esp-01-pinout.png)
