Bugfix: sendData() to print HTTP response headers properly

--- a/esp8266.md
+++ b/esp8266.md
@@ -288,10 +288,13 @@ void sendData()
 {
     client.print("GET /iot/boom HTTP/1.1\r\nHost: reaktor-iot.herokuapp.com\r\nConnection: close\r\n\r\n");
     
-    while (client.available()) {
-      char c = client.read();
-      Serial.write(c);
+    while (client.connected()) {
+      while (client.available()) {
+        char c = client.read();
+        Serial.write(c);
+      }
     }
+    Serial.println("\nConnection closed");
 }
 ```
 
